# pq-dns-testing

./: README.md  sandbox.c
pqc-dynamic/: CMakeLists.txt  README.md
pqc-dynamic/.github/workflows/: build.yml
pqc-dynamic/include/: dns_message.h  packedrr.h  resource_record.h  rrfrag.h
pqc-dynamic/lib/hashmap/: CMakeLists.txt
pqc-dynamic/src/: daemon.c  dns_message.c  packedrr.c  question.c  resource_record.c  rrfrag.c
test/: Makefile  arrf_dynamic  arrf_static  benchmark.sh  dns_message.c  dns_message.h  handler.c  original.c  packedrr.c  packedrr.h  question.c  question.h  resource_record.c  rrfrag.c  sandbox.c  sandbox.h  server
test/network/: client.c  server.c
